salesforce_package/force-app/main/default/objects/Evidence__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <label>Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>amount</fullName>
                </value>
                <value>
                    <fullName>duration</fullName>
                </value>
                <value>
                    <fullName>lifecycle</fullName>
                </value>
                <value>
                    <fullName>behaviour</fullName>
                </value>
                <value>
                    <fullName>multivariate</fullName>
                </value>
                <value>
                    <fullName>duplication</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>