salesforce_package/force-app/main/default/objects/Evidence__c/fields/Investigation_Case__c.field-meta.xml
<CustomField>
    <fullName>Investigation_Case__c</fullName>
    <label>Investigation Case</label>
    <type>Lookup</type>
    <referenceTo>Investigation_Case__c</referenceTo>
    <relationshipName>Evidence</relationshipName>
    <relationshipLabel>Evidence</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>