salesforce_package/force-app/main/default/objects/Evidence__c/fields/Signal__c.field-meta.xml
<CustomField>
    <fullName>Signal__c</fullName>
    <label>Signal</label>
    <type>Text</type>
    <length>120</length>
</CustomField>